--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
          <link rel='stylesheet' type='text/css' href='style_accueil.css'>
     </head>
     <tbody>
-        <div id="bgimage"><img src="img_3.jpg" alt="Image" height="600px" width="1000px" /></div>
+        <div id="bgimage"><img src="img_3.jpg" alt="Image" height="1000px" width="1630px" /></div>
         <div id="bgimage1"><img src="sonatel_academy1.png" alt="Image"/></div>
             <div class="lesTPs">
                <button> <a href="tp1.html">TP 1</a></button>
@@ -23,7 +23,7 @@
             <p id='mon_image'><img src="mon_img_tabaski.jpeg" /></p>
             <div class="options"> 
                 <div >Fatou THIAM <br><br> Référentiel:<br> <br> Développement Data<br> <br>Cohorte 5</div>
-                <br> Numéro: 78 186 15 73<br><br> E-mail: fatoubouya2402@gmail.com <br>
+                <br> Numéro: 78 186 15 73<br><br> E-mail: fatoubouya2402@gmail<br>.com <br>
             </div> -->
         </div>
 
