--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
         <div class="left">
             <p id='mon_image'><img src="mon_img_tabaski.jpeg" /></p>
             <div class="options"> 
-                <div >Fatou THIAM <br><br> Référentiel:<br> <br> Développement Data<br> <br>Cohorte 5</div>
-                <br> Numéro: 78 186 15 73<br><br> E-mail: fatoubouya2402@gmail<br>.com <br>
-            </div> -->
+                <div >Fatou THIAM <br><br><br> Référentiel:<br> <br><br> Développement Data<br> <br><br>Cohorte 5</div><br>
+                <br> Numéro: 78 186 15 73<br><br><br> E-mail:<br><br> fatoubouya2402@gmail<br><br>.com <br>
+            </div> 
+            <div class="Sonatel_academie">
+                <button> <a href="#">SA?</a></button>
+            </div>
+            <div class="dev_data">
+                <button> <a href="#">dev Data?</a></button>
+            </div>
         </div>
 
 
