--- a/tp6.html
+++ b/tp6.html
@@ -6,8 +6,8 @@
          <link rel='stylesheet' type='text/css' href='style6.css'>
     </head>
     <tbody>
-        <div>
-            <img src="background.jpg" alt="Image" height="800px" width="1500px" />
+        <div class="mybody">
+            <img src="background.jpg" alt="Image" height="800px" width="1550px" />
             <h1 id="idrebours">Compte à rebours du Nouvel An</h1>
                 <div class="jours">
                     <h1> 18</h1>
