--- a/tp2.html
+++ b/tp2.html
@@ -11,16 +11,37 @@
 		<ol>
 			<p>Dans un Dissertation on'a les étapes suivantes</p>
 			<li>Introduction</li>
+			<ol>
+				<li>Amener le suijet</li>
+				<li>Poser la problèmatique</li>
+				<li>Anoncer le plan</li>
+			</ol>
 			<li>Développement</li>
+			<ul>
+				<li>Partie 1</li>
+				<li>Partie 2</li>
+			</ul>
 			<li>Conclusion</li>
+			<ul>
+				<li>Partie 1</li>
+				<li>Partie 2</li>
+			</ul>
 		</ol>
 		<h2>Exemple de liste non ordonnée</h2>
 		<ul>
 			<p>Mes Fruits préféré</p>
 			<li>Mangue</li>
+			<ul>
+				<li>Mangue vert</li>
+				<li> Mangue jaune</li>
+			</ul>
 			<li>Pastèque</li>
 			<li>Ananas</li>
 			<li>Clèmentine</li>
+			<ul>
+				<li>Petit</li>
+				<li> Grand</li>
+			</ul>
 			<li>Pamplemousse</li>
 		</ul>
 		<h2>Exemple de liste de définition</h2>
