--- a/tp7/formulaire.html
+++ b/tp7/formulaire.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<div class="contener">
-			<div id="signUpText" >Sign Up</div>
-			<div class="signUp" ></div>
+			
+			<div class="signUp" ><div id="signUpText" >Sign Up</div></div>
 
 			<div class="formulaire" >
 				<p>Register with us to get offers,support and more</p>
