--- a/tp7/tp7_Etat1.html
+++ b/tp7/tp7_Etat1.html
@@ -10,6 +10,7 @@
 			<h1 id="id_ioc">I.O.C</h1>
 			<p id="phrase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, quibusdam</p>
 			<button id="button">Sign Up</button>
+			<div class="icon">&#9776;</div> 
 		</div>
 		<div class="texte">
 			<h1>What about my web page?</h1>
