--- a/tp7/tp7_Etat2.html
+++ b/tp7/tp7_Etat2.html
@@ -7,9 +7,13 @@
 	</head>
 	<body>
 		<div class="header">
+			
 			<h1 id="id_ioc">I.O.C</h1>
 			<p id="phrase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, quibusdam</p>
 			<button id="button">Sign Up</button>
+			<div class="contenantIcon">
+				<div class="icon">&#9776;</div>
+			</div>
 		</div>
 		<div class="left">
 			<p id='image'><img src="my_photo.jpeg" /></p>
