--- a/tp7/tp7_Etat3.html
+++ b/tp7/tp7_Etat3.html
@@ -2,43 +2,43 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>tp7 Etat 3</title>
+		<title>tp 7 Etat 3</title>
 		<link rel="stylesheet" type="text/css" href="style7_3.css">
 	</head>
 	<body>
 		<div class="header">
 			<h1 id="id_ioc">I.O.C</h1>
 			<p id="phrase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, quibusdam</p>
-			<button id="button">
-				<a href="#formbox">Sign Up</a>
-			</button>
-			<div id="formbox" class="form">
-				<div class="formcontent">
-					<div class="contener">
-						<div id="signUpText" >Sign Up</div>
-						<div class="signUp"></div>
+			<button id="button">Sign Up</button>
+			<div class="icon">&#9776;</div> 
+		</div>
+		<div class="contener">
+			
+			<div class="signUp" ><div id="signUpText" >Sign Up</div></div>
 
-							<p>Register with us to get offers,support and more</p>
-							<form>
-								<label for="nom">Nom</label><br/>
-								<input type="text" id="nom" placeholder="Enter Nom" /><br/>
-								<br/>
-								<label for="Email">Nom</label><br/>
-								<input type="email" id="nom" placeholder="Enter Email" /><br/>
-								<br/>
-								<label for="Passwd">Password</label><br/>
-								<input type="text" id="Passwd" placeholder="Enter Password" /><br/>
-								<br/>
-								<label for="ConfirmPasswd">Confirm Password</label><br/>
-								<input type="text" id="ConfirmPasswd" placeholder="Confirm Password"/><br/>
-								<br/>
-								<button  name="button">Submit</button>
-							</form>	
-					</div>
-				</div>
+			<div class="formulaire" >
+				<p>Register with us to get offers,support and more</p>
+				<form>
+					<label for="nom">Nom</label><br/>
+					<input type="text" id="nom" placeholder="Enter Nom" /><br/>
+					<br/>
+					<label for="Email">Email</label><br/>
+					<input type="email" id="nom" placeholder="Enter Email" /><br/>
+					<br/>
+					<label for="Passwd">Password</label><br/>
+					<input type="text" id="Passwd" placeholder="Enter Password" /><br/>
+					<br/>
+					<label for="ConfirmPasswd">Confirm Password</label><br/>
+					<input type="text" id="ConfirmPasswd" placeholder="Confirm Password"/><br/>
+					<br/>
+					<button  name="button">Submit</button>
+				</form>	
 			</div>
 		</div>
-		<!-- <div class="texte">
+
+	
+
+		<div class="texte">
 			<h1>What about my web page?</h1>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Sapiente qui incidunt odit animi cupiditate minus iusto id  <br/>nemo rerum beatae dolorum at porro non cosectetur,hic repellendus,harum similique accusamus.<br/>
 			<br/> Lorem ipsum dolor sit amet consectetur adipisicingelit. Porro quo,commodi dicta ipsa consequuntur ad aliquid<br/>
@@ -60,7 +60,7 @@
 			Lorem ipsum dolor sit amet consectetur adipisicingelit. Porro quo,commodi dicta ipsa?<br/>
 
 
-			</div> -->
+			</div>
 
 		</div>
 	</body>
